Fix alignment of Table checkboxes when row contains overflow menu
When a row contains both a checkbox (for selecting the row) and
an overflow menu, the checkbox is not correctly aligned.

Fix this by vertically aligning the checkbox and ensuring this
still works on tables using checkboxes but no overflow menu.

--- a/packages/components/src/components/Table/Table.scss
+++ b/packages/components/src/components/Table/Table.scss
@@ -35,6 +35,12 @@ limitations under the License.
       vertical-align: middle;
     }
 
+    &.bx--table-column-checkbox {
+      padding-top: 0;
+      padding-bottom: 0;
+      vertical-align: middle;
+    }
+
     &.cell-status {
       vertical-align: middle;
     }
